--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 API_KEY=blackout-secret-key
 FIREBASE_DB_URL=https://black-out-back-end-default-rtdb.firebaseio.com/
-RENDER_URL=https://your-app-name.onrender.com
+RENDER_URL=https://nodeblack.onrender.com
